<resources>
    <string name="app_name">MyBusiness</string>
    <string name="action_settings">Settings</string>
    <string name="business_name">Best Garage Shop</string>
    <string name="description"> Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        desktop publishing software like Aldus PageMake
        </string>
    <string name="address_label">Address:</string>
    <string name="address_value">A-11, sector-9, New Vijay Nagar, Ghaziabad</string>
    <string name="open_on">Open on:</string>
    <string name="opening_time">Sun-Sat, 24*7</string>
    <string name="call">Call</string>
</resources>
